
2015-11-25 Sergey Kashyrin <ska@kiska.net>

	* codegen.c (output_integer): cast program-pointer to unsigned char *,
	  not to void *

2015-11-23  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* tree.c (cb_get_int): Fix for Bug #167 - activated size check and set
	  limit depending on INT_MAX
	* tree.c (cb_get_int, cb_get_long_long, cb_get_u_long_long): don't COBC_ABORT
	  if numeric literals are too big but raise a normal compiler error showing
	  the actual (system specific) limit

2015-11-11  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	Fix for Bug #165:
	* pplex.l (ppopen): activated check for BOM independent of WIN32, skipped
	  it on compilations from stdin
	* cobc.c [_MSC_VER]: build and pass exename to cl.exe and mt.exe
	Fix for Bug #166:
	* cobc.c [_MSC_VER]: split (process) to (process_filtered) for filtering
	  cl.exe's verbose output - now filtering *all* lines instead of first three
	* cobc.c [_MSC_VER]: rewritten (line_contains) for matching "special" names

2015-11-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* cobc.c (process) [_MSC_VER]: bugfix in output filter
	* cobc.c (process_run): enable -j to work on systems that need ".\", too

2015-10-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* scanner.l: maximum word-length always resulted in error if -W[all]
	  was set, now only raise an error if -frelax-syntax is not set and
	  raise a warning if both -frelax-syntax and -W[all] are active

2015-10-28  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* tree.h: new field flag flag_is_pdiv_opt
	* parser.y: set f->flag_is_pdiv_opt for vars in USING with OPTIONAL clause
	* typeck.c (cb_build_identifier): add check for access of OPTIONAL LINKAGE
	  items if COB_EC_PROGRAM_ARG_OMITTED is active
	* typeck.c (cb_build_identifier): build and use full name (including the
	  actual used var, not only the name of the parent) for runtime checks of
	  BASED items and OPTIONAL LINKAGE items
