@@ -1,4 +1,9 @@
 
+2015-12-03  Edward Hart <edward.dan.hart@gmail.com>
+
+	* intrinsic.c: fixed bug #169 - added correct implementation of times
+	  ending with Z (i.e. to return the UTC time).
+
 2015-11-08  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* common.c (set_cob_time_offset)[WIN32]: bug #161 - offset for CURRENT-DATE
